--- a/polish/main/Settings.apk/res/values-pl/strings.xml
+++ b/polish/main/Settings.apk/res/values-pl/strings.xml
@@ -37,7 +37,7 @@
   <string name="language_keyboard_settings">Język i klawiatura</string>
   <string name="cloud_service_settings">Moje LeEco</string>
   <string name="control_center_settings">Panel sterowania</string>
-  <string name="notification_settings">Dźwięk i powiadomienie</string>
+  <string name="notification_settings">Powiadomienia</string>
   <string name="privacyauth_settings">Uprawnienia</string>
   <string name="personal_time_settings">Nie przeszkadzać</string>
   <string name="other_settings_section">Inne</string>
